# qt_vtk_ply_viewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: MainWindow.cpp  MainWindow.h  ParameterHelp.cpp  ParameterHelp.h  main.cpp
